[gd_scene load_steps=2 format=3 uid="uid://dgtuavn56ywbn"]

[ext_resource type="Script" path="res://root.gd" id="1_jlloq"]

[node name="root" type="MpvTextureRect" node_paths=PackedStringArray("player")]
player = NodePath("mpv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jlloq")

[node name="mpv" type="MpvPlayer" parent="."]
source = "http://download.opencontent.netflix.com.s3.amazonaws.com/CosmosLaundromat/CosmosLaundromat_2k24p_HDR_P3PQ.mp4"
autoplay = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.5
offset_top = -31.0
offset_right = 30.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="play" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "play"

[node name="pause" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "pause"

[node name="stop" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "stop"

[connection signal="pressed" from="HBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="HBoxContainer/stop" to="." method="_on_stop_pressed"]
